# PotentiostatAnalyzer

./: README.md  requirements.txt
analyzer_gui/: cleaner.py  plotter.py  potentiostatGUI.py  simulator.py  squidstatGUI.py
analyzer_gui/tests/: test_cleaner.py
hybrid_app/: CMakeLists.txt
hybrid_app/cpp_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
hybrid_app/py_backend/: simulate.py  simulate.spec
output/: simulated_squidstat_cleaned.csv
sample_data/: data_generator.py  simulated_squidstat.csv
